<resources>
    <string name="app_name">MedCard Patient</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="title_sign_in">Sign in</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_sign_up">Sign up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="title_sign_up">Sign up</string>
    <string name="action_logout">Logout</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="doctors">Doctors</string>
</resources>
